--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask==2.3.3
-tensorflow-cpu==2.15.0
-opencv-python-headless==4.8.1.78
-numpy==1.24.3
-gunicorn==21.2.0
-gevent==23.9.1
-Pillow==10.0.1
+tensorflow==2.17.0
+opencv-python-headless==4.10.0.84
+numpy==1.26.4
+gunicorn==23.0.0
+gevent==24.10.3
+Pillow==10.4.0
